2002-11-21  Masao Mutoh  <mutoh@highway.ne.jp>

	* rbgdk-pixbuf.c: Gdk::Pixbuf.new accept xpm data and colorspace.
	Add Gdk::Pixbuf#get_subpixbuf, #dup.
	* sample/xpm.rb: Add a sample.
	* sample/scale.rb: Code cleanup.

2002-11-19  Masao Mutoh  <mutoh@ejp1177linux.jpn.hp.com>

	* rbgdk-pixbuf.c: Implement Gdk::Pixbuf#save.
	Improve an error handling of Gdk::Pixbuf#initialize.
	Change default interp_type of Gdk::Pixbuf#scale.
	* sample/save.rb: Add a file.

2002-11-10  Masao Mutoh  <mutoh@highway.ne.jp>

	* README: Revised.
	* COPYING: Removed.

2002-11-05  Masao Mutoh  <mutoh@ejp1177linux.jpn.hp.com>

	* rbgdk-pixbuf.c: Bugfix for "undefined symbol: DBL2INT", "CSTR2STR",
	"STR2CSTR".
	(pointed out by KUBO Takehiro <kubo@jiubao.org>)
	* README: Add copyright.

2002-11-05  Masao Mutoh  <mutoh@ejp1177linux.jpn.hp.com>

	* rbgdk-pixbuf.c: Apply Ruby-GNOME2 rules.Code cleanup.Some modified.
	* sample/test.rb: Removed.
	* sample/*.rb: Follow Ruby/GTK2, rbgdk-pixbuf.c changes.

2002-09-14  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* extconf.rb: Append -fnative-struct to $CFLAGS when G_OS_WIN32 is defined
	* lib/gdk_pixbuf2.rb: rename from lib/gdk_pixbuf.rb
	* sample/*.rb: ditto 

2002-08-03  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* extconf.rb, rbgdk-pixbuf.c, lib/gdk_pixbuf.rb, sample/*.rb:
	port to Ruby/GNOME2

Wed May 29 00:31:47 2002 Masao Mutoh <mutoh@highway.ne.jp>

   * README: Modified.

Sat Nov 24 16:28:00 2001 Neil Conway <neilconway@rogers.com>

	* MANIFEST: File removed.

Thu Nov 22 16:02:12 2001 Akinori MUSHA <knu@iDaemons.org>

	* extconf.rb: allow the user to specify where to find
	glib-config and gdk-pixbuf-config.

Mon Oct  8 13:09:42 2001  Neil Conway <neilconway@rogers.com>

	* README: improve documentation, add contact info.

	* ChangeLog: remove duplicate entries.

Fri Oct  5 22:48:15 2001  Neil Conway <neilconway@rogers.com>

	* extconf.rb: Fix typo.

Wed Mar 28 07:00:30 2001  Hiroshi IGARASHI  <iga@ruby-lang.org>
