@@ -1,6 +1,9 @@
 /* -*- c-file-style: "ruby" -*- */
 /* 
- * Copyright (C) 2000 Yasushi Shoji
+ * Copyright (C) 2002 Ruby-GNOME2 Project Team
+ *
+ * Original:
+ *  Copyright (C) 2000 Yasushi Shoji
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Library General Public
@@ -26,7 +29,66 @@
 #define _SELF(s) GDK_PIXBUF(RVAL2GOBJ(s))
 
 /****************************************************/
-/* Common */
+/* The GdkPixbuf Structure */
+static VALUE
+get_colorspace(self)
+    VALUE self;
+{
+    return INT2FIX(gdk_pixbuf_get_colorspace(_SELF(self)));
+}
+
+static VALUE
+get_n_channels(self)
+    VALUE self;
+{
+    return INT2FIX(gdk_pixbuf_get_n_channels(_SELF(self)));
+}
+
+static VALUE
+get_has_alpha(self)
+    VALUE self;
+{
+    return INT2FIX(gdk_pixbuf_get_has_alpha(_SELF(self)));
+}
+
+static VALUE
+get_bits_per_sample(self)
+    VALUE self;
+{
+    return INT2FIX(gdk_pixbuf_get_bits_per_sample(_SELF(self)));
+}
+/*
+guchar*     gdk_pixbuf_get_pixels           (const GdkPixbuf *pixbuf);
+*/
+
+static VALUE
+get_width(self)
+    VALUE self;
+{
+    return INT2FIX(gdk_pixbuf_get_width(_SELF(self)));
+}
+
+static VALUE
+get_height(self)
+    VALUE self;
+{
+    return INT2FIX(gdk_pixbuf_get_height(_SELF(self)));
+}
+
+static VALUE
+get_rowstride(self)
+    VALUE self;
+{
+    return INT2FIX(gdk_pixbuf_get_rowstride(_SELF(self)));
+}
+
+static VALUE
+get_option(self, key)
+    VALUE self, key;
+{
+    const gchar* ret = gdk_pixbuf_get_option(_SELF(self), RVAL2CSTR(key));
+    return ret ? CSTR2RVAL(ret) : Qnil;
+}
 
 /****************************************************/
 /* File opening */
@@ -43,7 +105,7 @@ initialize(argc, argv, self)
     gchar** data;
     int i;
 
-    rb_scan_args(argc, argv, "15", &arg1, &arg2,
+    rb_scan_args(argc, argv, "14", &arg1, &arg2,
                  &arg3, &arg4, &arg5);
 
     if (argc == 5){
@@ -62,7 +124,7 @@ initialize(argc, argv, self)
             }
             buf = gdk_pixbuf_new_from_xpm_data((const char**)data);
         } else {
-            rb_raise(rb_eArgError, "1st argument is not correct.");
+            rb_raise(rb_eArgError, "Wrong type of 1st arguments");
         }
     }
     
@@ -216,8 +278,9 @@ scale(argc, argv, self)
     GdkInterpType interp_type = GDK_INTERP_BILINEAR;
     GdkPixbuf* dest = NULL;
 
-    rb_scan_args(argc, argv, "28", &args[0], &args[1], &args[2], &args[3], &args[4], 
-                 &args[5], &args[6], &args[7], &args[8], &args[9]);
+    rb_scan_args(argc, argv, "28", &args[0], &args[1], 
+                 &args[2], &args[3], &args[4], &args[5], 
+                 &args[6], &args[7], &args[8], &args[9]);
 
     switch (argc) {
       case 2:
@@ -253,66 +316,109 @@ scale(argc, argv, self)
 }
 
 static VALUE
-get_colorspace(self)
+composite(argc, argv, self)
+    int argc;
+    VALUE *argv;
     VALUE self;
 {
-    return INT2FIX(gdk_pixbuf_get_colorspace(_SELF(self)));
+    VALUE ret;
+    VALUE args[15];
+    GdkInterpType interp_type = GDK_INTERP_BILINEAR;
+
+    rb_scan_args(argc, argv, "79", 
+                 &args[0], &args[1], &args[2], &args[3], &args[4], 
+                 &args[5], &args[6], &args[7], &args[8], &args[9],
+                 &args[10], &args[11], &args[12], &args[13], &args[14],
+                 &args[15]);
+
+    switch (argc) {
+      case 7:
+	if (!NIL_P(args[2]))
+	    interp_type = FIX2INT(args[2]);
+
+        ret = GOBJ2RVAL(gdk_pixbuf_composite_color_simple(_SELF(self),
+                                                          NUM2INT(args[0]),
+                                                          NUM2INT(args[1]),
+                                                          interp_type,
+                                                          NUM2INT(args[3]),
+                                                          NUM2INT(args[4]),
+                                                          NUM2UINT(args[5]),
+                                                          NUM2UINT(args[6])));
+
+	break;
+      case 11:
+	if (!NIL_P(args[9]))
+	    interp_type = FIX2INT(args[9]);
+
+        gdk_pixbuf_composite(_SELF(self), _SELF(args[0]), 
+                             NUM2INT(args[1]), NUM2INT(args[2]),
+                             NUM2INT(args[3]), NUM2INT(args[4]),
+                             NUM2DBL(args[5]), NUM2DBL(args[6]),
+                             NUM2DBL(args[7]), NUM2DBL(args[8]),
+                             interp_type, NUM2INT(args[10]));
+        ret = args[0];
+        break;
+      case 16:
+	if (!NIL_P(args[9]))
+	    interp_type = FIX2INT(args[9]);
+
+        gdk_pixbuf_composite_color(_SELF(self), _SELF(args[0]),
+                                   NUM2INT(args[1]), NUM2INT(args[2]),
+                                   NUM2INT(args[3]), NUM2INT(args[4]),
+                                   NUM2DBL(args[5]), NUM2DBL(args[6]),
+                                   NUM2DBL(args[7]), NUM2DBL(args[8]),
+                                   interp_type, NUM2INT(args[10]),
+                                   NUM2INT(args[11]), NUM2INT(args[12]),
+                                   NUM2INT(args[13]), NUM2UINT(args[14]),
+                                   NUM2UINT(args[15]));
+        ret = args[0];
+        break;
+      default:
+	rb_raise(rb_eArgError, "Wrong number of arguments: %d", argc);
+	break;
+    }
+    return ret;
 }
 
 static VALUE
-get_n_channels(self)
-    VALUE self;
+add_alpha(self, substitute_color, r, g, b)
+    VALUE self, substitute_color, r, g, b;
 {
-    return INT2FIX(gdk_pixbuf_get_n_channels(_SELF(self)));
+    return GOBJ2RVAL(gdk_pixbuf_add_alpha(_SELF(self),
+                                          RTEST(substitute_color),
+                                          FIX2INT(r), FIX2INT(g), FIX2INT(b)));
 }
 
 static VALUE
-get_has_alpha(self)
-    VALUE self;
+copy_area(self, src_x, src_y, width, height, dest, dest_x, dest_y)
+    VALUE self, src_x, src_y, width, height, dest, dest_x, dest_y;
 {
-    return INT2FIX(gdk_pixbuf_get_has_alpha(_SELF(self)));
+    gdk_pixbuf_copy_area(_SELF(self), NUM2INT(src_x), NUM2INT(src_y),
+                         NUM2INT(width), NUM2INT(height),
+                         _SELF(dest), NUM2INT(dest_x), NUM2INT(dest_y));
+    return dest;
 }
 
 static VALUE
-get_bits_per_sample(self)
-    VALUE self;
+saturate_and_pixelate(self, staturation, pixelate)
+    VALUE self, staturation, pixelate;
 {
-    return INT2FIX(gdk_pixbuf_get_bits_per_sample(_SELF(self)));
-}
-/*
-guchar*     gdk_pixbuf_get_pixels           (const GdkPixbuf *pixbuf);
-*/
-
-static VALUE
-get_width(self)
-    VALUE self;
-{
-    return INT2FIX(gdk_pixbuf_get_width(_SELF(self)));
+    GdkPixbuf* dest = gdk_pixbuf_copy(_SELF(self));
+    gdk_pixbuf_saturate_and_pixelate(_SELF(self), dest, 
+                                     NUM2DBL(staturation), RTEST(pixelate));
+    return GOBJ2RVAL(dest);
 }
 
 static VALUE
-get_height(self)
-    VALUE self;
+fill(self, pixel)
+    VALUE self, pixel;
 {
-    return INT2FIX(gdk_pixbuf_get_height(_SELF(self)));
+    gdk_pixbuf_fill(_SELF(self), NUM2UINT(pixel));
+    return self;
 }
 
-static VALUE
-get_rowstride(self)
-    VALUE self;
-{
-    return INT2FIX(gdk_pixbuf_get_rowstride(_SELF(self)));
-}
-
-static VALUE
-get_option(self, key)
-    VALUE self, key;
-{
-    const gchar* ret = gdk_pixbuf_get_option(_SELF(self), RVAL2CSTR(key));
-    return ret ? CSTR2RVAL(ret) : Qnil;
-}
-
-void Init_gdk_pixbuf2()
+void 
+Init_gdk_pixbuf2()
 {
     VALUE gdkPixbuf;
     gdk_rgb_init(); /* initialize it anyway */
@@ -321,7 +427,7 @@ void Init_gdk_pixbuf2()
     /*
      * Initialization and Versions 
      */
-    rb_define_const(gdkPixbuf, "VERSION", INT2FIX(gdk_pixbuf_version));
+    rb_define_const(gdkPixbuf, "VERSION", CSTR2RVAL(gdk_pixbuf_version));
     rb_define_const(gdkPixbuf, "MAJOR", INT2FIX(GDK_PIXBUF_MAJOR));
     rb_define_const(gdkPixbuf, "MINOR", INT2FIX(GDK_PIXBUF_MINOR));
     rb_define_const(gdkPixbuf, "MICRO", INT2FIX(GDK_PIXBUF_MICRO));
@@ -337,7 +443,7 @@ void Init_gdk_pixbuf2()
     rb_define_method(gdkPixbuf, "width", get_width, 0);
     rb_define_method(gdkPixbuf, "height", get_height, 0);
     rb_define_method(gdkPixbuf, "rowstride", get_rowstride, 0);
-    rb_define_method(gdkPixbuf, "option", get_option, 0);
+    rb_define_method(gdkPixbuf, "get_option", get_option, 1);
     /* GdkPixbufError(not yet) */
     /* GdkColorspace */
     rb_define_const(gdkPixbuf, "COLORSPACE_RGB", INT2FIX(GDK_COLORSPACE_RGB));
@@ -364,7 +470,7 @@ void Init_gdk_pixbuf2()
      * Scaling
      */
     rb_define_method(gdkPixbuf, "scale", scale, -1);
-    /* rb_define_method(gdkPixbuf, "composite", composite, -1); */
+    rb_define_method(gdkPixbuf, "composite", composite, -1);
     /* GdkInterpType */
     rb_define_const(gdkPixbuf, "INTERP_NEAREST", INT2FIX(GDK_INTERP_NEAREST));
     rb_define_const(gdkPixbuf, "INTERP_TILES", INT2FIX(GDK_INTERP_TILES));
@@ -389,4 +495,8 @@ void Init_gdk_pixbuf2()
     /*
      * Utilities
      */
+    rb_define_method(gdkPixbuf, "add_alpha", add_alpha, 4);
+    rb_define_method(gdkPixbuf, "copy_area", copy_area, 7);
+    rb_define_method(gdkPixbuf, "saturate_and_pixelate", saturate_and_pixelate, 2);
+    rb_define_method(gdkPixbuf, "fill!", fill, 1);
 }
